[gd_scene load_steps=5 format=3 uid="uid://3y4wlgqjokug"]

[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="1_vx85b"]
[ext_resource type="Script" path="res://Scripts/volume_slider.gd" id="2_g00kx"]

[sub_resource type="InputEventKey" id="InputEventKey_13elr"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_ke64k"]
events = [SubResource("InputEventKey_13elr")]

[node name="Pause_menu" type="Control"]
process_mode = 2
z_index = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.05176e-05
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(10, 10)
script = ExtResource("1_vx85b")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -2755.0
offset_top = -1114.0
offset_right = 2761.0
offset_bottom = 1031.0
color = Color(0, 0, 0, 1)

[node name="Paused_text" type="Label" parent="."]
layout_mode = 0
offset_left = -324.2
offset_top = -287.1
offset_right = 316.8
offset_bottom = -103.1
theme_override_font_sizes/font_size = 100
text = "- Paused -"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Unpause_button" type="Button" parent="."]
layout_mode = 0
offset_left = -212.9
offset_top = 85.7
offset_right = 214.1
offset_bottom = 177.7
shortcut = SubResource("Shortcut_ke64k")
text = "Resume"

[node name="Quit_button" type="Button" parent="."]
layout_mode = 0
offset_left = -211.0
offset_top = 210.0
offset_right = 215.0
offset_bottom = 302.0
text = "Quit Game"

[node name="Master_vol_label" type="Label" parent="."]
layout_mode = 0
offset_left = -62.0
offset_top = -119.5
offset_right = 60.0
offset_bottom = -96.5
text = "Master Volume:"

[node name="master_volume" type="HSlider" parent="."]
layout_mode = 0
offset_left = -205.0
offset_top = -85.5
offset_right = 206.0
offset_bottom = -69.5
max_value = 1.0
step = 0.001
value = 0.75
script = ExtResource("2_g00kx")
bus_name = "Master"

[node name="Music_vol_label" type="Label" parent="."]
layout_mode = 0
offset_left = -57.2
offset_top = -47.1
offset_right = 55.8
offset_bottom = -24.1
text = "Music Volume:"

[node name="music_volume" type="HSlider" parent="."]
layout_mode = 0
offset_left = -205.5
offset_top = -16.5
offset_right = 208.5
offset_bottom = -0.5
max_value = 1.0
step = 0.001
value = 0.75
script = ExtResource("2_g00kx")
bus_name = "music"

[node name="sfx_vol_label" type="Label" parent="."]
layout_mode = 0
offset_left = -87.4
offset_top = 16.3
offset_right = 85.6
offset_bottom = 39.3
text = "Sound Effects Volume:"

[node name="sfx_volume" type="HSlider" parent="."]
layout_mode = 0
offset_left = -205.5
offset_top = 47.0
offset_right = 208.5
offset_bottom = 63.0
max_value = 1.0
step = 0.001
value = 0.75
script = ExtResource("2_g00kx")
bus_name = "sfx"

[connection signal="pressed" from="Unpause_button" to="." method="_on_unpause_button_pressed"]
[connection signal="pressed" from="Quit_button" to="." method="_on_quit_button_pressed"]
